# qwanyx-server

./: .gitignore  ARCHITECTURE_DECISIONS.md  AWS-SES-SMTP-credentials.txt  BELGICOMICS_SETUP.md  CLAUDE.md  COMMANDS-NEW.sh  COMMANDS.sh  DEPLOY_REACT_MODULES.sh  DH-DATABASE-STRUCTURE.md  DH-FIRMWARE-LAYER.md  DNS_CORRECTIONS.txt  FILE-STORAGE-SYSTEM.md  FIX_API_ACCESS.sh  INFRASTRUCTURE-SETUP.md  MEMORY-STRUCTURE.md  MICRO-FRONTEND-ARCHITECTURE.md  OVH-CLI-secret.txt  QWANYX-IMAGE-EDITOR-ROADMAP.md  QWANYX-PAGE-LAYOUT-EDITOR-ROADMAP.md  QWANYX-STATE.md  QWANYX-SYSTEM-ARCHITECTURE.md  QWANYX_ARCHITECTURE.md  README.md  RUN.bat  SSH_MANUAL_DEPLOY.md  START_ALL.bat  START_APIS.bat  START_DEV.bat  TEXT.txt  add-ses-us-east-dns.py  architecture_overview.md  auto-deploy.sh  check-database.py  check-users.py  check_codes.py  clean-all-users.py  clean-test-users.py  deploy-belgicomics.sh  deploy-modules.sh  deploy-next.sh  (+29 more)
.claude/: settings.local.json
.ssh/: config  ovh_key  ovh_key.pub
Personal-CASH/: Dette Alimentaire LL.txt  add_bank_account_to_transaction.py  add_display_order.py  add_effective_date.py  add_free_communication.py  add_net_amount_to_transaction.py  add_recurring_fields.py  app.py  app_mongodb_unified.py  dev_001.md  migrate_to_unified.py  migration_plan.md  process_invoices.py  reimport_invoices.py  requirements.txt  run.bat
QWANYX-Architecture-Clean/: .gitignore  ARCHITECTURE_PRINCIPLES.md  AUTODIN_BUILD_AUDIT.md  AUTODIN_REBUILD_PLAN.md  BUILD_HARMONIZATION_PLAN.md  CLAUDE.md  COMMANDS.sh  DEBUG.txt  DEPLOYMENT_DECISIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  DEPLOY_NOW.md  DEPLOY_SIMPLE.md  DH_MAIL_CLIENT_SPEC.md  DH_MEMORY_IMPLEMENTATION.md  DH_SALES_AGENT.md  DH_WORKSPACE_ARCHITECTURE.md  MAIL_SYSTEM_TECHNICAL_SPEC.md  MASTER_REBUILD_PLAN.md  README.md  (+36 more)
QWANYX-Architecture-Clean/qwanyx-brain/spu-compression/: Cargo.toml
QWANYX-Architecture-Clean/qwanyx-brain/spu-compression/src/: lib.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/: .env.example  Cargo.toml  delivery-report-2025-08-27_20-31-25.md  delivery-report-2025-08-27_20-35-41.md  test_parser.rs  test_simple_parser.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/examples/: autodin_request_management.spu  silent_test.rs  spu_1_0_demo.spu
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/src/: ai_integration.rs  coprocessor.rs  data_types.rs  lib.rs  lib_new.rs  lib_old.rs  lib_old_full.rs  main.rs  old_executor.rs  openai_client.rs  parser.rs  runtime.rs  simple_parser.rs  storage_coprocessor.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/src/bin-disabled/: test_api.rs  test_evaluation.rs  test_real_api.rs  test_spu_executor.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/src/coprocessors/: auth.rs  database.rs  email.rs  mod.rs  real_email.rs  semantic_compressor.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-core/tests/: autodin_integration_test.rs  demo_test.rs  docs_verification_test.rs  integration_test.rs  phase2_3_tests.rs  simple_test.rs  spu_1_0_tests.rs  unit_tests.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/: Cargo.toml  README.md  TESTING_STRATEGY.md
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/business-plan/: README.md
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/business-plan/financial/: 3-year-plan.md
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/docs/: DEMOCRATIZED_SUPERINTELLIGENCE.md  HYBRID_CPU_GPU_ARCHITECTURE.md  SPECIALIZED_SPHERES_INTELLIGENCE.md
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/: config.rs  error.rs  lib.rs  main.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/api/: websocket.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/auth/: mod.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/email/: mod.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/spu/: cache.rs  compression.rs  instruction.rs  mod.rs  processor.rs  space.rs  worlds.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/tests/: auth_tests.rs  compression_tests.rs  db_tests.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/src/workspace/: mod.rs
QWANYX-Architecture-Clean/qwanyx-brain/spu-rust/tests/: processor_test.rs
(+736 files in other folders)
