[package]
name = "spu-compression"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ajout progressif - UNE dépendance à la fois
lazy_static = "1.4"  # Pour les mappings statiques
serde = { version = "1.0", features = ["derive"] }  # Pour serialization
serde_json = "1.0"  # Pour JSON serialization dans les tests
thiserror = "2.0"  # Pour gestion d'erreurs propre