[package]
name = "spu-core"
version = "0.1.0"
edition = "2021"
authors = ["QWANYX SPU Team"]
description = "SPU Core - Pure semantic processor with zero dependencies"

[dependencies]
# Pour charger les variables d'environnement
dotenv = "0.15"

# Pour les appels HTTP à OpenAI
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pour MongoDB et BSON
bson = "2.15"
mongodb = { version = "2.8" }
tokio = { version = "1.35", features = ["full"] }

# Pour les dates
chrono = { version = "0.4", features = ["serde"] }
