[package]
name = "spu-core"
version = "0.1.0"
edition = "2021"
authors = ["QWANYX SPU Team"]
description = "SPU Core - Object-Oriented Assembly Language Runtime"

[dependencies]
# Local dependencies
spu-compression = { path = "../spu-compression" }

# Web server
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data structures
dashmap = "5.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Email functionality
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
mail-parser = "0.9"
imap = "2.4"  # Use stable version
native-tls = "0.2"

# Auth functionality
rand = "0.8"
jsonwebtoken = "9.2"

# Database and environment
dotenv = "0.15"
bson = "2.15"
mongodb = { version = "2.8" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
