[package]
name = "qwanyx-spu"
version = "0.1.0"
edition = "2021"
authors = ["QWANYX Team"]
description = "Semantic Processing Unit - High-performance brain engine"

[dependencies]
# Local dependencies
spu-compression = { path = "../spu-compression" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Web framework
actix-web = "4.4"
actix-ws = "0.2"
actix-cors = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bson = "2.15"

# Database
mongodb = { version = "2.8" }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport"] }
mail-parser = "0.9"
imap = "2.4"
native-tls = "0.2"

# Performance
rayon = "1.8"
dashmap = "5.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Configuration
config = "0.13"
dotenv = "0.15"

# Additional utilities
base64 = "0.21"
num_cpus = "1.16"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
pretty_assertions = "1.4"
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
serial_test = "3.0"

# Benchmarks (à ajouter plus tard)
# [[bench]]
# name = "compression"
# harness = false
#
# [[bench]]
# name = "space"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
